Fixup minor issues with spacing on Sunday Schedule.

--- a/additonal_styles.css
+++ b/additonal_styles.css
@@ -148,9 +148,11 @@ form.wcorg-mailchimp input[type=submit] {
 
 .wcpt-schedule td, .wcpt-schedule th {
   border: 1px solid #cccccc;
-  position: relative; }
+  position: relative;
+  width: 24%; }
 .wcpt-schedule th:first-child, .wcpt-schedule td:first-child {
-  padding-left: 5px; }
+  padding-left: 5px;
+  width: 70px; }
 
 .wcpt-session-speakers {
   display: block;
@@ -164,7 +166,10 @@ form.wcorg-mailchimp input[type=submit] {
   display: block;
   padding: 4px; }
 
-td.wcpt-session-type-session, td.wcb-session-opening-remarks, td.wcb-session-keynote {
+td.wcpt-session-type-session,
+td.wcb-session-opening-remarks,
+td.wcb-session-keynote,
+td.wcb-session-closing-remarks {
   vertical-align: top;
   padding: 0px;
   padding-bottom: 30px; }
@@ -217,6 +222,10 @@ td.wcb-session-ambassador-program {
     display: block; }
   .wcpt-schedule th {
     display: none; }
+  .wcpt-schedule td, .wcpt-schedule th {
+    width: 100%; }
+  .wcpt-schedule th:first-child, .wcpt-schedule td:first-child {
+    width: 100%; }
 
   .wcpt-time {
     font-weight: bold;
